--- a/home.html
+++ b/home.html
@@ -26,33 +26,18 @@
         </div>
         <div id="quienesSomos">
             <h1>¿Quienes Somos?</h1>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+            <h4>Somos una empresa dedicada al transporte confiable y eficiente, comprometida con la satisfacción y seguridad de nuestros clientes. Con años de experiencia en el sector, nuestro objetivo es brindar soluciones de transporte adaptadas a las necesidades de cada cliente, garantizando puntualidad, integridad y una experiencia de servicio excepcional.
+                Nos enorgullece contar con un equipo profesional y capacitado, así como una flota moderna de vehículos que nos permite ofrecer servicios de transporte seguros y sostenibles. Trabajamos día a día para optimizar nuestras operaciones y así poder ofrecer un servicio de calidad, cumpliendo con altos estándares de seguridad y responsabilidad.
+            </h4>
         </div>
         <div id="contactanos">
             <h1>Contactanos</h1>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+            <a href="https://web.whatsapp.com/">+56 9 6404 1720</a>
         </div>
         <div id="proposito">
             <h1>proposito</h1>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+            <h4>Nuestro propósito es conectar personas y negocios, facilitando el movimiento de bienes y servicios con seguridad, eficiencia y puntualidad. Nos esforzamos por ser una pieza clave en la cadena de valor de nuestros clientes, brindándoles un servicio de transporte confiable que impulse su crecimiento y les permita alcanzar sus metas. Queremos ser reconocidos no solo por nuestro compromiso con la calidad, sino también por nuestra dedicación a la sostenibilidad y a las buenas prácticas en cada uno de nuestros trayectos
+            </h4>
         </div>
     </main>
     <footer>
